fix: better solution

--- a/06.Flexbox/04.FlexModel-Calendar/Solution/index.html
+++ b/06.Flexbox/04.FlexModel-Calendar/Solution/index.html
@@ -10,30 +10,19 @@
 
     <div class="container">
         <section class="week">
-            <div class="main">
-                <div class="upper">Workweek</div>
-                <div class="boxes">
-                    <div class="item small">1 Monday</div>
-                    <div class="item small">2 Thuesday</div>
-                    <div class="item small">3 Wednesday</div>
-                    <div class="item small">4 Thursday</div>
-                    <div class="item small">5 Friday</div>
-                </div>
-            </div>
-
-            <div class="aside">REMINDERS</div>
+            <span>Workweek</span>
+            <span>Monday</span>
+            <span>Tuesday</span>
+            <span>Wednesday</span>
+            <span>Thursday</span>
+            <span>Friday</span>
+            <span>Weekend</span>
+            <span>Saturday</span>
+            <span>Sunday</span>
         </section>
-
         <section class="notes">
-            <div class="main">
-                <div class="upper">Weekend</div>
-                <div class="boxes">
-                    <div class="item big">6 Saturday</div>
-                    <div class="item big">7 Sunday</div>
-                </div>
-            </div>
-
-            <div class="aside">SPECIAL DATES</div>
+            <span>REMINDERS</span>
+            <span>SPECIAL DATES</span>
         </section>
     </div>
     
