--- a/06.Flexbox/09.Center-Flexbox/Solution/index.html
+++ b/06.Flexbox/09.Center-Flexbox/Solution/index.html
@@ -11,10 +11,12 @@
 <body>
 
     <div class="card">
-        <h2>Card Title</h2>
-        <p>
-            Some kind of description here that explains this strange behaviour of the system
-        </p>
+        <article>
+            <h3>Card Title</h3>
+            <p>
+                Some kind of description here that explains this strange behaviour of the system
+            </p>
+        </article>
     </div>
 
 </body>
