feat: add a few more CSS files

--- a/07.Media-Queries/04.Update-Blog-Layout/Solution/index.html
+++ b/07.Media-Queries/04.Update-Blog-Layout/Solution/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Update Blog Layout</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./layout.css">
+    <link rel="stylesheet" href="./typography.css">
+    <link rel="stylesheet" href="./navigation.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -11,6 +15,15 @@
     <div class="page">
         <header>
             <p>Site title</p>
+            <nav>
+                <ul>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/">About</a></li>
+                    <li><a href="/">Products</a></li>
+                    <li><a href="/">Stuff</a></li>
+                    <li><a href="/">Contacts</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main>
