feat: add media query

--- a/07.Media-Queries/04.Update-Blog-Layout/Solution/index.html
+++ b/07.Media-Queries/04.Update-Blog-Layout/Solution/index.html
@@ -15,6 +15,10 @@
     <div class="page">
         <header>
             <p>Site title</p>
+            <label for="fa-items" class="menu-close">
+                <i class="fas fa-times"></i>
+                <span class="menu-text">Menu</span>
+            </label>
             <nav>
                 <ul>
                     <li><a href="/">Home</a></li>
