--- a/07.Media-Queries/06.Responsive-Media-Boxes/Solution/index.html
+++ b/07.Media-Queries/06.Responsive-Media-Boxes/Solution/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <section class="card">
+        <div class="image-wrapper">
+            <img src="../Requirements-and-Resources/images/picture1.jpg" alt="river-at-night">
+        </div>
+        <div class="text-wrapper">
+            <h3>Card Title</h3>
+            <p class="main-text">
+                Short description of what this is all about - crafted to make people interested
+            </p>
+            <div class="wrap-btn">
+                <p>See more</p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
