fix: one paragraph tag is replaced by span tag and one css rule

--- a/07.Media-Queries/06.Responsive-Media-Boxes/Solution/index.html
+++ b/07.Media-Queries/06.Responsive-Media-Boxes/Solution/index.html
@@ -18,7 +18,7 @@
                 Short description of what this is all about - crafted to make people interested
             </p>
             <div class="wrap-btn">
-                <p>See more</p>
+                <span>See more</span>
             </div>
         </div>
     </section>
