--- a/07.Media-Queries/07.Landing-Page/Solution/index.html
+++ b/07.Media-Queries/07.Landing-Page/Solution/index.html
@@ -1,14 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./typography.css">
 </head>
+
 <body>
 
-    
-    
+    <header>
+        <div class="heading-header">
+            <h2 class="capitalize purple-h2">purple spider</h2>
+            <p>the last web agency you will ever need</p>
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/">About us</a>
+                </li>
+                <li>
+                    <a href="/">Services</a>
+                </li>
+                <li>
+                    <a href="/">Blog</a>
+                </li>
+                <li>
+                    <a href="/">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="mobile-menu">
+            <i class="fas fa-bars"></i>
+            <span>Menu</span>
+        </div>
+    </header>
+
+    <main>
+        <section class="need-a-website">
+            <div class="wrap-text-earth">
+                <h2>Need a website?</h2>
+                <p>
+                    We do amazing futuristic stuff using the same tools everyone has. We are so unique and awesome we
+                    didn't spend money on marketing gurus ot copy writers!
+                </p>
+                <span class="frame">Tell us about your project</span>
+            </div>
+            <div class="wrap-image-earth">
+                <img src="../Requirements-and-Resources/images/earth-2.jpg" class="earth" alt="earth">
+            </div>
+        </section>
+        <section class="our-team">
+            <h2>Our Team</h2>
+            <article>
+                <ul>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/1.jpg" alt="man">
+                        <p class="name">Genghis Khan</p>
+                        <p class="profession">CTO</p>
+                        <p class="describe-person">Smart dude, geeky, knows his stuff! Nothing else.</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/2.jpg" alt="man">
+                        <p class="name">Sun Tzu</p>
+                        <p class="profession">Sales</p>
+                        <p class="describe-person">Very agressive! Results driven.</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/3.jpg" alt="woman">
+                        <p class="name">Maria Kherry</p>
+                        <p class="profession">CEO</p>
+                        <p class="describe-person">Drinks a lot! Loves meetings.</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/4.jpg" alt="man">
+                        <p class="name">Some Guy</p>
+                        <p class="profession">CEO Optimisation</p>
+                        <p class="describe-person">Drinks. Hates computers ...</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/5.jpg" alt="woman">
+                        <p class="name">Alice Logan</p>
+                        <p class="profession">Front End</p>
+                        <p class="describe-person">Cares to much about useless things.</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/6.jpg" alt="man">
+                        <p class="name">Vladimir Klitchko</p>
+                        <p class="profession">Health Coach</p>
+                        <p class="describe-person">We are happy when he teaches us.</p>
+                    </li>
+                </ul>
+            </article>
+        </section>
+        <section></section>
+        <section></section>
+    </main>
+
+    <footer></footer>
+
 </body>
+
 </html>
