feat: sign-up section is added

--- a/07.Media-Queries/07.Landing-Page/Solution/index.html
+++ b/07.Media-Queries/07.Landing-Page/Solution/index.html
@@ -54,8 +54,9 @@
                 <img src="../Requirements-and-Resources/images/earth-2.jpg" class="earth" alt="earth">
             </div>
         </section>
-        <section class="our-team">
+        <section class="position our-team">
             <h2>Our Team</h2>
+            <hr>
             <article>
                 <ul>
                     <li>
@@ -97,7 +98,16 @@
                 </ul>
             </article>
         </section>
-        <section></section>
+        <section class="position sign-up">
+            <h2>Sign-up to our newsletter</h2>
+            <hr>
+            <form>
+                <div class="wrap-form">
+                    <input type="text" class="input">
+                    <button type="submit">Абонирай се</button>
+                </div>
+            </form>
+        </section>
         <section></section>
     </main>
 
