feat: section testimonials is ready

--- a/07.Media-Queries/07.Landing-Page/Solution/index.html
+++ b/07.Media-Queries/07.Landing-Page/Solution/index.html
@@ -108,7 +108,68 @@
                 </div>
             </form>
         </section>
-        <section></section>
+        <section class="position testimonials">
+            <h2>testimonials</h2>
+            <hr>
+            <article>
+                <ul>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/2.jpg" alt="man">
+                        <p class="describe-person">
+                            The most amazingly professional and absolutely great poeple I have
+                            had the pleasure to work with on the face of the earth.
+                        </p>
+                        <p class="name">Sun Tzu</p>
+                        <p class="profession">Sales</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/2.jpg" alt="man">
+                        <p class="describe-person">
+                            The most amazingly professional and absolutely great poeple I have
+                            had the pleasure to work with on the face of the earth.
+                        </p>
+                        <p class="name">Sun Tzu</p>
+                        <p class="profession">Sales</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/2.jpg" alt="man">
+                        <p class="describe-person">
+                            The most amazingly professional and absolutely great poeple I have
+                            had the pleasure to work with on the face of the earth.
+                        </p>
+                        <p class="name">Sun Tzu</p>
+                        <p class="profession">Sales</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/2.jpg" alt="man">
+                        <p class="describe-person">
+                            The most amazingly professional and absolutely great poeple I have
+                            had the pleasure to work with on the face of the earth.
+                        </p>
+                        <p class="name">Sun Tzu</p>
+                        <p class="profession">Sales</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/2.jpg" alt="man">
+                        <p class="describe-person">
+                            The most amazingly professional and absolutely great poeple I have
+                            had the pleasure to work with on the face of the earth.
+                        </p>
+                        <p class="name">Sun Tzu</p>
+                        <p class="profession">Sales</p>
+                    </li>
+                    <li>
+                        <img src="../Requirements-and-Resources/images/2.jpg" alt="man">
+                        <p class="describe-person">
+                            The most amazingly professional and absolutely great poeple I have
+                            had the pleasure to work with on the face of the earth.
+                        </p>
+                        <p class="name">Sun Tzu</p>
+                        <p class="profession">Sales</p>
+                    </li>
+                </ul>
+            </article>
+        </section>
     </main>
 
     <footer></footer>
