feat: solution task-7

--- a/07.Media-Queries/07.Landing-Page/Solution/index.html
+++ b/07.Media-Queries/07.Landing-Page/Solution/index.html
@@ -172,7 +172,71 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <section>
+            <article>
+                <h2>Purple Spider</h2>
+                <p>
+                    We are the best web gurus you will ever have the pleasure to encounter. We are amazing.
+                </p>
+            </article>
+            <article>
+                <h3>Sitemap</h3>
+                <div class="wrap-footer-sitemap">
+                    <ul>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/">Services</a></li>
+                        <li><a href="/">Contacts</a></li>
+                        <li><a href="/">Privacy Policy</a></li>
+                    </ul>
+                    <ul>
+                        <li><a href="/">About us</a></li>
+                        <li><a href="/">Blog</a></li>
+                        <li><a href="/">Terms and Conditions</a></li>
+                    </ul>
+                </div>
+            </article>
+            <article>
+                <h3>Contacts</h3>
+                <ul>
+                    <li class="position-address">
+                        <div class="wrap-icon-address">
+                            <i class="fas fa-phone-volume"></i>
+                        </div>
+                        <div class="wrap-address">
+                            0700 12 345
+                        </div>
+                    </li>
+                    <li class="position-address">
+                        <div class="wrap-icon-address">
+                            <i class="fas fa-envelope"></i>
+                        </div>
+                        <div class="wrap-address">
+                            office@purplespider.bg
+                        </div>
+                    </li>
+                    <li class="position-address">
+                        <div class="wrap-icon-address">
+                            <i class="fas fa-clock"></i>
+                        </div>
+                        <div class="wrap-address">
+                            Monday - Friday: 09:00 - 18:00
+                        </div>
+                    </li>
+                    <li class="position-address">
+                        <div class="wrap-icon-address">
+                            <i class="fas fa-map-marked"></i>
+                        </div>
+                        <div class="wrap-address">
+                            <p>Sofia,</p>
+                            <p>28 Some Place Str.</p>
+                            <p>fl. 1</p>
+                        </div>
+                    </li>
+                </ul>
+            </article>
+        </section>
+    </footer>
 
 </body>
 
