--- a/00.Exams/05-July-2020/01.Diploma-and-Certificates/Solution/index.html
+++ b/00.Exams/05-July-2020/01.Diploma-and-Certificates/Solution/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diploma and Certificates</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+
+    <article>
+        <section class="wrap-all-text">
+            <h2>
+                Придобитите сертификати и диплома от обучението в СофтУни, доказват знанията и уменията, които си усвоил
+                и се ценят от технологичните компании-работодатели.
+            </h2>
+            <p>
+                Сертификат - сертификат за курс на СофтУни се издава след успешно преминат изпит, при оценка 5.00 или
+                по-висока.
+            </p>
+            <p>
+                Диплома - студентите от програмата по софтуерно инженерство на СофтУни получават цялостна диплома* за
+                професия, след събиране на необходимия брой кредити.
+            </p>
+            <p class="italic">
+                * Дипломата, която издава "Софтуерен университет" ЕООД, не е държавно призната, но бива призната от
+                компаниите - работодатели
+            </p>
+        </section>
+        <section class="wrap-documents">
+            <article class="certificate-wrapper">
+                <img src="../Requirements-and-Resources/images/certificate.png" alt="certificate">
+            </article>
+            <article class="diploma-wrapper">
+                <img src="../Requirements-and-Resources/images/diploma.png" alt="diploma">
+            </article>
+        </section>
+    </article>
+
 </body>
+
 </html>
