feat: positioning elements on the page and some elements are made strong

--- a/00.Exams/05-July-2020/01.Diploma-and-Certificates/Solution/index.html
+++ b/00.Exams/05-July-2020/01.Diploma-and-Certificates/Solution/index.html
@@ -10,18 +10,18 @@
 
 <body>
 
-    <article>
+    <article class="wrap-all-page">
         <section class="wrap-all-text">
             <h2>
                 Придобитите сертификати и диплома от обучението в СофтУни, доказват знанията и уменията, които си усвоил
                 и се ценят от технологичните компании-работодатели.
             </h2>
             <p>
-                Сертификат - сертификат за курс на СофтУни се издава след успешно преминат изпит, при оценка 5.00 или
+                <strong>Сертификат</strong> - сертификат за курс на СофтУни се издава след успешно преминат изпит, при оценка 5.00 или
                 по-висока.
             </p>
             <p>
-                Диплома - студентите от програмата по софтуерно инженерство на СофтУни получават цялостна диплома* за
+                <strong>Диплома</strong> - студентите от програмата по софтуерно инженерство на СофтУни получават цялостна диплома* за
                 професия, след събиране на необходимия брой кредити.
             </p>
             <p class="italic">
