feat: solution task-1

--- a/00.Exams/05-July-2020/01.Diploma-and-Certificates/Solution/index.html
+++ b/00.Exams/05-July-2020/01.Diploma-and-Certificates/Solution/index.html
@@ -24,16 +24,16 @@
                 <strong>Диплома</strong> - студентите от програмата по софтуерно инженерство на СофтУни получават цялостна диплома* за
                 професия, след събиране на необходимия брой кредити.
             </p>
-            <p class="italic">
+            <p class="italic pseudo-element">
                 * Дипломата, която издава "Софтуерен университет" ЕООД, не е държавно призната, но бива призната от
                 компаниите - работодатели
             </p>
         </section>
         <section class="wrap-documents">
-            <article class="certificate-wrapper">
+            <article class="certificate-wrapper pseudo-element">
                 <img src="../Requirements-and-Resources/images/certificate.png" alt="certificate">
             </article>
-            <article class="diploma-wrapper">
+            <article class="diploma-wrapper pseudo-element">
                 <img src="../Requirements-and-Resources/images/diploma.png" alt="diploma">
             </article>
         </section>
