feat: all sections in main are ready

--- a/00.Exams/05-July-2020/03.Certificates-Landing-Page/Solution/index.html
+++ b/00.Exams/05-July-2020/03.Certificates-Landing-Page/Solution/index.html
@@ -34,7 +34,72 @@
         </article>
     </header>
 
-    <main></main>
+    <main>
+        <article class="diploma">
+            <div class="size">
+                <section class="wrap-all-text">
+                    <h3>Диплома и сертификати</h3>
+                    <p class="main-text">
+                        След края на всеки завършен курс, курсистите получават автентичен сертификат на SoftUni Creative
+                        при
+                        оценка равна на или по-голяма от 5.00. Пропорционално на оценката се получават и определен брой
+                        кредити. Успелите да съберaт необходимия брой - 84* кредити от участието си в различните курсове
+                        на
+                        SoftUni Creative и преминалите през всички курсове от дадено професионално направление, ще
+                        получат
+                        професионалнa диплома за избраната специалност**.
+                    </p>
+                    <p class="small-text">
+                        *Необходимият брой кредити за професията Graphic Designer е 90.
+                    </p>
+                    <p class="small-text">
+                        **Дипломата, която издава SoftUni Creative, не е държавно призната, но бива призната от
+                        компаниите -
+                        работодатели
+                    </p>
+                </section>
+                <section class="wrap-image img-right">
+                    <img src="../images/diplomas.png" alt="diplomas">
+                </section>
+            </div>
+        </article>
+
+        <article class="certificates">
+            <div class="size">
+                <section class="wrap-all-text">
+                    <h3>Държавно признати Сертификати и Удостоверения</h3>
+                    <p class="main-text">
+                        SoftUni е лицензиран учебен център по Закона за професионалното образование и обучение. След
+                        всеки
+                        успешно преминат курс, участниците получават държавно признато „Свидетелство за професионално
+                        обучение“, както и приложение, валидно на територията на целия Европейски съюз.
+                    </p>
+                </section>
+                <section class="wrap-image img-right">
+                    <img src="../images/cpe.jpg" alt="award">
+                </section>
+            </div>
+        </article>
+
+        <article class="career-assistance">
+            <div class="size">
+                <section class="wrap-image img-left">
+                    <img src="../images/career-center.png" alt="career-center">
+                </section>
+                <section class="wrap-all-text">
+                    <h3>Кариерно съдействие</h3>
+                    <p class="main-text">
+                        SoftUni Creative си партнира пряко с редица успешни агенции и компании с цел осигуряване на
+                        кариерен старт за млади специалисти в сферата на визуалната индустрия. Всички успешно
+                        дипломирали се курсисти, ще получат кариерно съдействие от страна на СофтУни, изразяващо се в
+                        безплатни консултации с кариерен специалист и директни препоръки за работа във водещи български
+                        и международни компании. За повече информация, можете да пишете на:
+                    </p>
+                    <button>CAREERS@SOFTUNI.BG</button>
+                </section>
+            </div>
+        </article>
+    </main>
 
     <footer></footer>
 
