--- a/00.Exams/05-July-2020/03.Certificates-Landing-Page/Solution/index.html
+++ b/00.Exams/05-July-2020/03.Certificates-Landing-Page/Solution/index.html
@@ -60,6 +60,7 @@
                 </section>
                 <section class="wrap-image img-right">
                     <img src="../images/diplomas.png" alt="diplomas">
+                    <div class="circle"></div>
                 </section>
             </div>
         </article>
@@ -101,7 +102,62 @@
         </article>
     </main>
 
-    <footer></footer>
+    <footer>
+        <article class="wrap-footer">
+            <div class="size">
+                <section>
+                    <h3>SOFTUNI CREATIVE</h3>
+                    <ul>
+                        <li><a href="/">За нас</a></li>
+                        <li><a href="/">Обучения</a></li>
+                        <li><a href="/">Сертификати</a></li>
+                        <li><a href="/">преподаватели</a></li>
+                        <li><a href="/">Такси</a></li>
+                        <li><a href="/">Партньори</a></li>
+                        <li><a href="/">Общи условия</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>ВСИЧКИ ОБУЧЕНИЯ</h3>
+                    <ul>
+                        <li><a href="/">Курсове</a></li>
+                        <li><a href="/">Семинари</a></li>
+                    </ul>
+                    <h3>ВСИЧКИ ИНИЦИАТИВИ</h3>
+                    <ul>
+                        <li><a href="/">Software University</a></li>
+                        <li><a href="/">SoftUni Digital</a></li>
+                        <li><a href="/">SoftUni Kids</a></li>
+                        <li><a href="/">SoftUni Svetlina</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <h3>НАШИТЕ ПАРТНЬОРИ</h3>
+                    <ul>
+                        <li><a href="/">Дизайнът на Нещата</a></li>
+                        <li><a href="/">Pixel House</a></li>
+                        <li><a href="/">Apihawk</a></li>
+                        <li><a href="/">Infragistics</a></li>
+                        <li><a href="/">Fontfabric</a></li>
+                        <li><a href="/">Coca-Cola HBC Bulgaria</a></li>
+                        <li><a href="/">Areté Creative Agency</a></li>
+                        <li><a href="/">3DCG Arts</a></li>
+                    </ul>
+                </section>
+                <section class="last-section-footer">
+                    <div class="wrap-icons">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-google-plus-g"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                    <p>© 2017-2020 - SoftUni Creative.</p>
+                    <p>All Rights Reserved.</p>
+                </section>
+            </div>
+        </article>
+    </footer>
 
 </body>
 
