feat: add reset rules

--- a/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
+++ b/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,22 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
-    
-    
+    <div class="wrap-all-page">
+        <header></header>
+
+        <main>
+            <section></section>
+            <section></section>
+            <section></section>
+            <section></section>
+        </main>
+
+        <footer></footer>
+    </div>
+
 </body>
+
 </html>
