feat: the header html is made

--- a/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
+++ b/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
@@ -12,7 +12,19 @@
 <body>
 
     <div class="wrap-all-page">
-        <header></header>
+        <header>
+            <h2>Food</h2>
+            <ul>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Recipes</a></li>
+                <li><a href="/">Cuisines</a></li>
+                <li><a href="/">Tips</a></li>
+            </ul>
+            <div class="wrap-login-icon-serach">
+                <button>Log in</button>
+                <i class="fas fa-search"></i>
+            </div>
+        </header>
 
         <main>
             <section></section>
