feat: add header

--- a/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
+++ b/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
@@ -27,7 +27,12 @@
         </header>
 
         <main>
-            <section></section>
+            <section class="carving">
+                <h1>What are you carving?</h1>
+                <div class="wrap-search-field">
+                    <input type="text">
+                </div>
+            </section>
             <section></section>
             <section></section>
             <section></section>
