feat: add section cocktails

--- a/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
+++ b/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
@@ -21,7 +21,7 @@
                 <li><a href="/">Tips</a></li>
             </ul>
             <div class="wrap-login-icon-serach">
-                <button>Log in</button>
+                <button class="dark-brown">Log in</button>
                 <i class="fas fa-search"></i>
             </div>
         </header>
@@ -33,7 +33,18 @@
                     <input type="text">
                 </div>
             </section>
-            <section></section>
+            <section class="party">
+                <div class="wrap-section-image">
+                    <img src="../Requirements-and-Resources/Media/cocktails.jpg" alt="cocktails">
+                </div>
+                <div class="wrap-section-text">
+                    <h2>Party favorites</h2>
+                    <p>
+                        The best cocktails and how to make them
+                    </p>
+                    <button class="dark-brown">View recipes</button>
+                </div>
+            </section>
             <section></section>
             <section></section>
         </main>
