feat: section toolbox is ready

--- a/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
+++ b/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
@@ -45,8 +45,51 @@
                     <button class="dark-brown">View recipes</button>
                 </div>
             </section>
-            <section></section>
-            <section></section>
+            <section class="cookies">
+                <div class="wrap-section-text">
+                    <h2>A Royal-Icing Tutorial:</h2>
+                    <p>
+                        Decorate Christmas Cookies Like a Boss
+                    </p>
+                </div>
+                <div class="wrap-section-image">
+                    <img src="../Requirements-and-Resources/Media/cookies.jpg" alt="cookies">
+                </div>
+            </section>
+            <section class="toolbox">
+                <div class="wrap-heading-toolbox">
+                    <span>Cookie Toolbox</span>
+                </div>
+                <div class="wrap-images-toolbox">
+                    <div class="container-each-image">
+                        <img src="../Requirements-and-Resources/Media/cutters.jpg" alt="cutters">
+                        <p class="text-img-toolbox">
+                            Cookie cutters
+                        </p>
+                    </div>
+                    <div class="container-each-image">
+                        <img src="../Requirements-and-Resources/Media/sheets.jpg" alt="sheets">
+                        <p class="text-img-toolbox">
+                            Baking sheets
+                        </p>
+                    </div>
+                    <div class="container-each-image">
+                        <img src="../Requirements-and-Resources/Media/bowls.jpg" alt="bowls">
+                        <p class="text-img-toolbox">
+                            Batter bowls
+                        </p>
+                    </div>
+                    <div class="container-each-image">
+                        <img src="../Requirements-and-Resources/Media/rolling_pin.jpg" alt="rolling pin">
+                        <p class="text-img-toolbox">Rolling pin</p>
+                    </div>
+                </div>
+                <div class="wrap-shop-btn">
+                    <button class="red-shop-btn">
+                        <a href="/">Shop Now!</a>
+                    </button>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
