--- a/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
+++ b/00.Exams/17-December-2019/03.Cooking Blog/Solution/index.html
@@ -92,7 +92,29 @@
             </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <section>
+                <ul>
+                    <li><a href="/">About</a></li>
+                    <li><a href="/">Team</a></li>
+                    <li><a href="/">Events</a></li>
+                    <li><a href="/">Jobs</a></li>
+                </ul>
+    
+                <ul>
+                    <li><a href="/">FAQ</a></li>
+                    <li><a href="/">My Orders</a></li>
+                    <li><a href="/">Favorites</a></li>
+                    <li><a href="/">Contacts</a></li>
+                </ul>
+    
+                <ul>
+                    <li><a href="">&copy;2019</a></li>
+                    <li><a href="">Terms</a></li>
+                    <li><a href="">Privacy</a></li>
+                </ul>
+            </section>
+        </footer>
     </div>
 
 </body>
