feat: first section under header is ready

--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
@@ -9,7 +9,66 @@
 </head>
 <body>
 
-    
+    <div class="wrap-all-page">
+        <header>
+            <section class="wrap-items">
+                <article class="wrap-logo-header">
+                    <img src="../Requirements-and-Resources/images/software-university-logo.svg" alt="logo">
+                    <button class="orange orange-btn btn-small">кандидатствай</button>
+                </article>
+
+                <article class="wrap-menu-header">
+                    <nav>
+                        <ul>
+                            <li><a href="/">за нас</a></li>
+                            <li><a href="/">обучения</a></li>
+                            <li><a href="/">контакти</a></li>
+                        </ul>
+                        <i class="fas fa-search"></i>
+                        <button class="orange orange-btn btn-small">вход</button>
+                    </nav>
+                </article>
+            </section>
+        </header>
+
+        <main>
+            <section class="under-header">
+                <article>
+                    <p class="light-text">Софтуерно инженерство</p>
+                    <p class="dark-text bold">Отворени курсове и модули</p>
+                </article>
+            </section>
+
+            <section class="heading-one">
+                <article>
+                    <h1>WordPress Essentials - август 2019</h1>
+                    <div class="main-points">
+                        <p class="thin">
+                            <i class="fas fa-play-circle"></i>
+                            <span>13 август 2019</span>
+                        </p>
+                        <p class="thin">
+                            <i class="fas fa-file-alt"></i>
+                            <span>29 септември 2019</span>
+                        </p>
+                        <p class="thin">
+                            <i class="far fa-clock"></i>
+                            <span>4 седмици</span>
+                        </p>
+                        <p class="thin">
+                            <i class="fas fa-graduation-cap"></i>
+                            <span>3 кредита</span>
+                        </p>
+                    </div>
+                    <button class="orange orange-btn btn-big">
+                        <a href="/" class="bold">ЗАЯВИ УЧАСТИЕ</a>
+                    </button>
+                </article>
+            </section>
+        </main>
+
+        <footer></footer>
+    </div>
     
 </body>
 </html>
