--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
 
     <div class="wrap-all-page">
@@ -65,10 +67,29 @@
                     </button>
                 </article>
             </section>
+
+            <section class="for-course">
+                <article>
+                    <h2>ЗА КУРСА</h2>
+                    <p>
+                        Курсът <span>WordPress Essentials</span> изгражда базови технически умения по разработка на уеб сайтове с
+                        <span>WordPress</span>: настройка на хостинг и домейн, инсталиране и конфигуриране на <span>WordPress (WP)</span>,
+                        инсталиране и конфигуриране на теми (<span>themes</span>) и добавки (<span>plugins</span>), създаване и редактиране на уеб
+                        съдържание (ръчно и с визуални уеб редактори), създаване на страници, публикации, снимки и
+                        мултимедия. Изучават се популярни WP теми и добавки (плъгини) и техните възможности за създаване
+                        на формуляри (forms), контакти, фото-галерии, форуми, електронни магазини и други. Въвеждат се
+                        базови познания по изграждане на собствена WP тема с <span>HTML, CSS и PHP WP</span>.
+                    </p>
+                    <button class="orange orange-btn btn-big">
+                        <a href="/" class="bold">ЗАЯВИ УЧАСТИЕ</a>
+                    </button>
+                </article>
+            </section>
         </main>
 
         <footer></footer>
     </div>
-    
+
 </body>
+
 </html>
