feat: section "Skills" is ready

--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
@@ -85,6 +85,22 @@
                     </button>
                 </article>
             </section>
+
+            <section class="skills">
+                <article>
+                    <h2>УМЕНИЯ, КОИТО ЩЕ ПРИДОБИЕШ</h2>
+                    <div class="wrap-skill-uls">
+                        <ul>
+                            <li>Инсталация и настройка на WordPress</li>
+                            <li>Създаване на цялостни WordPress сайтове</li>
+                            <li>Работа с уеб хостинг, домейни и cPanel</li>
+                            <li>Инсталация и настройка на теми и добавки</li>
+                            <li>Създаване и промяна на собствени WP теми</li>
+                            <li>Работа по практически проект изграден с WordPress</li>
+                        </ul>
+                    </div>
+                </article>
+            </section>
         </main>
 
         <footer></footer>
