feat: section "Topics" is ready

--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
@@ -101,6 +101,30 @@
                     </div>
                 </article>
             </section>
+
+            <section class="topics">
+                <article>
+                    <h2>ТЕМИ</h2>
+                    <div class="wrap-topics-ul">
+                        <ul>
+                            <li>RESOURCES</li>
+                            <li>COURSE INTRODUCTION</li>
+                            <li>INTRODUCTION TO WORDPRESS</li>
+                            <li>EXERCISE: INTRODUCTION TO WORDPRESS</li>
+                            <li>POPULAR WORDPRESS THEMES</li>
+                            <li>EXERCISE: POPULAR WORDPRESS THEMES</li>
+                            <li>USING WORDPRESS PLUGINS</li>
+                            <li>EXERCISE: USING WORDPRESS PLUGINS</li>
+                            <li>WORKSHOP: A REAL LIFE EXAMPLE</li>
+                            <li>CREATING CUSTOM WORDPRESS THEME</li>
+                            <li>EXERCISE: CREATING CUSTOM WORDPRESS THEME</li>
+                            <li>CONSULTING DAY</li>
+                            <li>PROJECT DEFENCES</li>
+                            <li>RETAKE EXAM (PROJECT DEFENCES)</li>
+                        </ul>
+                    </div>
+                </article>
+            </section>
         </main>
 
         <footer></footer>
