--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
@@ -72,9 +72,12 @@
                 <article>
                     <h2>ЗА КУРСА</h2>
                     <p>
-                        Курсът <span>WordPress Essentials</span> изгражда базови технически умения по разработка на уеб сайтове с
-                        <span>WordPress</span>: настройка на хостинг и домейн, инсталиране и конфигуриране на <span>WordPress (WP)</span>,
-                        инсталиране и конфигуриране на теми (<span>themes</span>) и добавки (<span>plugins</span>), създаване и редактиране на уеб
+                        Курсът <span>WordPress Essentials</span> изгражда базови технически умения по разработка на уеб
+                        сайтове с
+                        <span>WordPress</span>: настройка на хостинг и домейн, инсталиране и конфигуриране на
+                        <span>WordPress (WP)</span>,
+                        инсталиране и конфигуриране на теми (<span>themes</span>) и добавки (<span>plugins</span>),
+                        създаване и редактиране на уеб
                         съдържание (ръчно и с визуални уеб редактори), създаване на страници, публикации, снимки и
                         мултимедия. Изучават се популярни WP теми и добавки (плъгини) и техните възможности за създаване
                         на формуляри (forms), контакти, фото-галерии, форуми, електронни магазини и други. Въвеждат се
@@ -123,6 +126,18 @@
                             <li>RETAKE EXAM (PROJECT DEFENCES)</li>
                         </ul>
                     </div>
+                </article>
+            </section>
+
+            <section class="advice">
+                <article class="orange">
+                    <h2>за кого е подходящ курсът?</h2>
+                    <p>
+                        Курсът е подходящ както за начинаещи, така и за хора, с опит в програмирането, които искат да
+                        научат повече за разработката на уебсайтове с WordPress. Необходима е компютърна грамотност
+                        (работа с файлове, текстов редактор и браузър, инсталиране и конфигуриране на софтуер) и
+                        функционално владеене на английски език.
+                    </p>
                 </article>
             </section>
         </main>
