feat: section "Details" is ready

--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
@@ -140,6 +140,46 @@
                     </p>
                 </article>
             </section>
+
+            <section class="details">
+                <article>
+                    <section class="description">
+                        <p>
+                            <span class="large-orange">до кога мога да се запиша и кога стартира курсът?</span>
+                            Записването за курса е отворено до <span>11 август</span>. Обучението стартира на <span>13
+                                август 2019 г.</span> и
+                            завършва с защита на проект на <span>29 септември и 2 октомври 2019г. (може да изберете
+                                удобната дата за вас).</span>
+                        </p>
+                    </section>
+                    <section class="deep-description">
+                        <p>
+                            <span class="large-orange">КАК МОГА ДА СЕ ЗАПИША?</span> За да се <span>запишете за курса</span>,
+                            кликнете <span class="blue">ТУК</span> или на оранжевия бутон "<span>ЗАЯВЕТЕ УЧАСТИЕ</span>" и следвайте стъпките. След като
+                            заплатите за курса, вие ще бъдете записани в него.
+                        </p>
+                    </section>
+                    <section class="type-of-training">
+                        <div class="blue-container">
+                            <h3>присъствено</h3>
+                            <ul>
+                                <li>Присъствие на всички учебни занятия</li>
+                                <li>Достъп до ресурси и видеа от учебните занятия</li>
+                                <li>Достъп до виртуална класна стая и обучение в реално време</li>
+                                <li>Явяване на изпит и издаване на сертификат</li>
+                                <li>Контакт с лектор или асистент</li>
+                            </ul>
+                        </div>
+                        <div class="orange-container">
+                            <h3>ОНЛАЙН</h3>
+                            <ul>
+                                <li>Достъп до ресурси и видеа от учебните занятия</li>
+                                <li>Достъп до виртуална класна стая и обучение в реално време</li>
+                            </ul>
+                        </div>
+                    </section>
+                </article>
+            </section>
         </main>
 
         <footer></footer>
