feat: solution task-3

--- a/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
+++ b/00.Exams/13-August-2019/03_WordPress-Essentials/Solution/index.html
@@ -154,8 +154,10 @@
                     </section>
                     <section class="deep-description">
                         <p>
-                            <span class="large-orange">КАК МОГА ДА СЕ ЗАПИША?</span> За да се <span>запишете за курса</span>,
-                            кликнете <span class="blue">ТУК</span> или на оранжевия бутон "<span>ЗАЯВЕТЕ УЧАСТИЕ</span>" и следвайте стъпките. След като
+                            <span class="large-orange">КАК МОГА ДА СЕ ЗАПИША?</span> За да се <span>запишете за
+                                курса</span>,
+                            кликнете <span class="blue">ТУК</span> или на оранжевия бутон "<span>ЗАЯВЕТЕ УЧАСТИЕ</span>"
+                            и следвайте стъпките. След като
                             заплатите за курса, вие ще бъдете записани в него.
                         </p>
                     </section>
@@ -180,9 +182,80 @@
                     </section>
                 </article>
             </section>
+
+            <section class="teacher">
+                <article>
+                    <h2>ПРЕПОДАВАТЕЛ</h2>
+                    <div class="wrap-img-and-text">
+                        <img src="../Requirements-and-Resources/images/lecturer.png" alt="lecturer">
+                        <p>
+                            <span class="bold-heading">Георги Генов</span>
+                            <span>Георги Генов</span> се занимава с програмиране от около 8 години, въпреки че пише първия си код на
+                            15 години. Още тогава проявява интерес към програмирането и се научава на основните неща
+                            съвсем сам с уроци от интернет. Завършва Технически университет София, специалност
+                            Автоматика. Сега работи като Software Developer & Resource Team Lead в голяма софтуерна
+                            фирма и Freelancer, за да бъде в крак с новите технологии.
+                        </p>
+                    </div>
+                </article>
+            </section>
+
+            <section class="button">
+                <button class="orange orange-btn btn-big">
+                    <a href="/" class="bold">ЗАЯВИ УЧАСТИЕ</a>
+                </button>
+            </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <article>
+                <section>
+                    <p class="orange-text">ЗА SOFTWARE UNIVERSITY</p>
+                    <ul>
+                        <li><a href="/">За нас</a></li>
+                        <li><a href="/">Учебен план</a></li>
+                        <li><a href="/">Сертификати</a></li>
+                        <li><a href="/">Преподаватели</a></li>
+                        <li><a href="/">Такси за обучение</a></li>
+                        <li><a href="/">Как да кандидатствам</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <p class="orange-text">ВСИЧКИ ОБУЧЕНИЯ</p>
+                    <ul>
+                        <li><a href="/">SoftUni Digital</a></li>
+                        <li><a href="/">SoftUni Creative</a></li>
+                        <li><a href="/">SoftUni Kids</a></li>
+                        <li><a href="/">SoftUni Svetlina</a></li>
+                        <li><a href="/">SoftUni Foundation</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <p class="orange-text">ОСНОВНИ ПАРТНЬОРИ</p>
+                    <ul>
+                        <li><a href="/">XS Software</a></li>
+                        <li><a href="/">SmartIT</a></li>
+                        <li><a href="/">Software Group</a></li>
+                        <li><a href="/">SuperHosting.BG</a></li>
+                        <li><a href="/">Indeavr</a></li>
+                        <li><a href="/">Infragistics</a></li>
+                        <li><a href="/">Netpeak</a></li>
+                        <li><a href="/">SBTech</a></li>
+                        <li><a href="/">Postbank</a></li>
+                    </ul>
+                </section>
+                <section>
+                    <div class="wrap-icons">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-youtube"></i>
+                        <i class="fab fa-github"></i>
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                    <p class="gray-text-footer">© 2013-2019 - Software University LTD - All Rights Reserved. 94851</p>
+                    <p class="gray-text-footer">Software University Learning System 3.0.7157</p>
+                </section>
+            </article>
+        </footer>
     </div>
 
 </body>
