feat: solution task-1

--- a/00.Exams/13-August-2019/01_Advantages/Solution/index.html
+++ b/00.Exams/13-August-2019/01_Advantages/Solution/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,23 @@
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+
+    <main class="wrap-all-page">
+        <ul>
+            <li>Online participation in laboratory exercises</li>
+            <li>Individual support from trainers</li>
+            <li>Opportunity for scholarship for free education</li>
+            <li>Interactive platform access and real-time training</li>
+            <li>Learning resources and homework check</li>
+            <li>Examinations and assessment</li>
+            <li>Participation in practical projects</li>
+            <li>Certificates and diplomas</li>
+            <li>Assistance in getting a job</li>
+        </ul>
+    </main>
+
 </body>
+
 </html>
