--- a/00.Exams/13-August-2019/02_HTTP-Cats/Solution/index.html
+++ b/00.Exams/13-August-2019/02_HTTP-Cats/Solution/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <title>HTTP Cats</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./responsive.css">
 </head>
 
 <body>
