--- a/00.Exams/12-August-2020/01. Simple-Articles/Solution/index.html
+++ b/00.Exams/12-August-2020/01. Simple-Articles/Solution/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple-Articles</title>
-    
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <section>
+        <article class="text-container">
+            <h3>What Is Included?</h3>
+            <ul>
+                <li>Nulla nec finibus orci, ut volutpat nibh. Sed ullamcorper porttitor.</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+                <li>Luctus et rhoncus. Vel sapien semper sit.</li>
+                <li>Eget amet, sapien mi ac ullamcorper amet. </li>
+                <li>Vulputate posuere pulvinar quisque at non pellentesque.</li>
+                <li>Nunc tempor varius sit magna massa tincidunt id eu.</li>
+            </ul>
+        </article>
+        <article class="price-container">
+            <div class="wrap-price">
+                <h1>$ 120</h1>
+                <span> /month</span>
+            </div>
+            <p>Start learning today at your own pace!</p>
+            <button>enroll now</button>
+        </article>
+    </section>
     
 </body>
 </html>
