feat: solution task-1

--- a/00.Exams/12-August-2020/01. Simple-Articles/Solution/index.html
+++ b/00.Exams/12-August-2020/01. Simple-Articles/Solution/index.html
@@ -24,10 +24,12 @@
         <article class="price-container">
             <div class="wrap-price">
                 <h1>$ 120</h1>
-                <span> /month</span>
+                <span>/month</span>
             </div>
             <p>Start learning today at your own pace!</p>
-            <button>enroll now</button>
+            <button>
+                <a href="/">enroll now</a>
+            </button>
         </article>
     </section>
     
