--- a/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
+++ b/00.Exams/12-August-2020/03. Certificates-Landing-Page/Solution/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificates-Landing-Page</title>
+    <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <header>
+        <nav>
+            <article class="logo-wrapper">
+                <img src="../Requirements-and-Resources/images/logo-header.svg" alt="softuni-logo">
+            </article>
+            <ul>
+                <li><a href="/">About Us</a></li>
+                <li><a href="/">Curriculum</a></li>
+                <li><a href="/">Certificates</a></li>
+                <li class="blue-line"><a href="/">Careers</a></li>
+                <li><a href="/">Fees</a></li>
+                <li><a href="/">Blog</a></li>
+                <li><a href="/">AA</a></li>
+            </ul>
+        </nav>
+    </header>
     
 </body>
 </html>
